# resource-profiler

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  pyproject.toml  recipe.yaml  requirements.txt  tauri.conf.json
scripts/: build_pyapp.py
src/: lib.rs
src/resource_profiler/: __init__.pxd  __init__.py  __init__.pyi  __main__.py
