[package]
name = 'resource-profiler'
version = '0.1.0'
edition = '2021'

[lib]
name = 'tauri'
crate-type = ['staticlib']

[dependencies]
tauri = '2.4.0'
tauri-utils = '2.3.0'
url = '2.5.4'

[build-dependencies]
tauri-build = '2.1.0'

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = 'abort'
strip = true
